# Baxter-CPP

./: .gitignore  CMakeLists.txt  Doxyfile  package.xml
doxyfiles/: CARRTBaxterCPPControl.dox
include/baxter_cpp_control/: arm_interface.h  baxter_defines.hpp  baxter_interface.h  baxter_utilities.hpp  gripper_interface.h
src/: arm_interface.cpp  baxter_interface.cpp  gripper_interface.cpp
